arch/arm64: configs: enable lz4 compression for zram
Test: boot and check /sys/block/zram0/comp_algorithm

Signed-off-by: Chenyang Zhong <zhongcy95@gmail.com>

--- a/arch/arm64/configs/oxygen_defconfig
+++ b/arch/arm64/configs/oxygen_defconfig
@@ -688,6 +688,18 @@ CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
 
+#
+# Compression
+#
+# CONFIG_CRYPTO_DEFLATE is not set
+# CONFIG_CRYPTO_LZO is not set
+# CONFIG_CRYPTO_842 is not set
+CONFIG_CRYPTO_LZ4=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
+# CONFIG_CRYPTO_LZ4HC is not set
+# CONFIG_CRYPTO_ZSTD is not set
+
 # Platform
 CONFIG_BOOT_INFO=y
 CONFIG_MACH_XIAOMI_OXYGEN=y
