--- a/arch/arm64/configs/oxygen_defconfig
+++ b/arch/arm64/configs/oxygen_defconfig
@@ -42,6 +42,10 @@ CONFIG_EMBEDDED=y
 CONFIG_PROFILING=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
+CONFIG_THIN_ARCHIVES=y
+CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
+CONFIG_LTO=y
+CONFIG_ARCH_HAS_RELR=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
