arch/arm64: configs: enable ThinLTO

--- a/arch/arm64/configs/oxygen_defconfig
+++ b/arch/arm64/configs/oxygen_defconfig
@@ -46,6 +46,8 @@ CONFIG_THIN_ARCHIVES=y
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_LTO=y
 CONFIG_ARCH_HAS_RELR=y
+CONFIG_ARCH_SUPPORTS_THINLTO=y
+CONFIG_THINLTO=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
