defconfig: enable LLVM Polly optimizer
Signed-off-by: halibw <bymark256@gmail.com>

--- a/arch/arm64/configs/oxygen_defconfig
+++ b/arch/arm64/configs/oxygen_defconfig
@@ -46,6 +46,7 @@ CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
 CONFIG_THIN_ARCHIVES=y
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_LTO=y
+CONFIG_LLVM_POLLY=y
 CONFIG_ARCH_HAS_RELR=y
 CONFIG_ARCH_SUPPORTS_THINLTO=y
 CONFIG_THINLTO=y
